modified:   controllers/directors.js 	modified:   routes/directors.js 	modified:   swagger.json
